# EVC-solarCar

./: README.md  kwvkezop.ncn.txt
Matlab-visualControl/: findHoughPeaks.m  find_path.m  line_detection-hough.m
src/: CMakeLists.txt  config.h  main.cpp  serialCar.cpp  serialCar.h  socketServer.py  trafficSignsDetection.cpp  trafficSignsDetection.h
src/comm_protocol/: i2c_com.py  serial_com.py
src/comm_protocol/Socket_communication/: socketClient.py  socketServer.py  socketServer_v0.py
src/comm_protocol/Socket_communication/socket_server/: socket_receive.sln
src/comm_protocol/Socket_communication/socket_server/socket_receive/: Program.cs  socket_receive.csproj
src/comm_protocol/Socket_communication/socket_server/socket_receive/Properties/: AssemblyInfo.cs
src/image/final_integrated/: CMakeLists.txt  config.h  main.cpp  serialCar.cpp  trafficSignsDetection.cpp  trafficSignsDetection.h
src/image/v1_line/: CMakeLists.txt  main.cpp
src/image/v2_robust/: CMakeLists.txt  main.cpp
src/image/v3_videoIn/: CMakeLists.txt  config.h  main2.cpp
src/image/v4_newAlgorithm/: config.h  main.cpp  serialCar.cpp  serialCar.h
src/image/v5_final/: CMakeLists.txt  Makefile  main.cpp
